# ferret-bench

./: .gitignore  CONTRIBUTING.md  FINDINGS-2026-07-22-measurement-precision.md  JOURNAL.md  PREREG-2026-07-21-trigger-clause.md  PROTOCOL.md  README.md  REVIEW-2026-07-15-methodology-audit.md  REVIEW-2026-07-15-rigorous-methodology-audit.md  REVIEW-2026-07-21-latest-work-resolution-assessment.md  STATE.md  factors.md  pyproject.toml  report.md
analysis/: judge-correct-precision-sample.json  judge-validation-manual-labels.json  judge-validation-sample.json  leaderboard-confirm.md  leaderboard.md  scores.jsonl
datasets/: README.md  assemble.py
docs/: decisions-pending.md  model-server.md
frozen-config/: PROVENANCE.md  README.md  config.json  system_prompt.txt  tool_read_url.json  tool_web_search.json
harness/: CONTRACT.md  JOURNAL.md  agent_loop.py  aggregate.py  chart.py  check_provenance.py  common.py  configs.py  export_site.py  http_cache.py  judge.py  leaderboard.py  llm.py  models-ceiling.txt  models-confirm.txt  models-gatefail.txt  models-variants.txt  page_content.json  providers.py  report.md  run_eval.py  run_readoff.sh  run_replicates.sh  run_trigger_test.sh  swap_eval.py  sweep.py  talents.py
scripts/: release-runs.sh
study-1/: ADMISSION_SUMMARY.md  CURATION-SPEC.md  JOURNAL.md  LEADERBOARD.md  PILOT_ADMISSION.md  RESOLUTION_SUMMARY.md  WEBDEV_HANDOFF.md  admit_pilot.py  export_site.py  generate.py  page_content.json  resolve.py  validate.py
tests/: README.md  _harness_path.py  test_agent_loop.py  test_pocketpal_replicas.py  (+2 more)
(+1113 files in other folders)
