[project]
name = "ferret-bench"
version = "0.2.0"
description = "Agentic web-search benchmark for small on-device LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["requests"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.urls]
Homepage = "https://github.com/a-ghorbani/ferret-bench"

# NOTE: harness/ is not yet an installable package — modules import each other as
# top-level names and rely on sys.path manipulation, so the supported entry point is
# `cd harness && python3 <script>.py`. Converting it (and removing the ~15
# sys.path.insert calls) is a wanted contribution; see CONTRIBUTING.md.

[tool.ruff]
line-length = 120
extend-exclude = ["runs", "cache"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E402"]  # sys.path shim must precede imports until the package layout lands

[tool.pytest.ini_options]
testpaths = ["tests"]
